测试自动部署

--- a/docs/00.目录页/01.java.md
+++ b/docs/00.目录页/01.java.md
@@ -26,7 +26,7 @@ GitHub：<https://github.com/oddfar/notes>
 
 Gitee： <https://gitee.com/oddfar/notes>
 
-### 为何不用博客
+### 为何不用博客？
 
 本人博客：https://oddfar.com
 
